feat(JAQPOT-103): qsar toolbox models
