# src/main/kotlin/org/jaqpot/api/service/model/PredictionService.kt
@@ -5,6 +5,7 @@ import org.jaqpot.api.dto.prediction.PredictionModelDto
 import org.jaqpot.api.entity.Dataset
 import org.jaqpot.api.entity.DatasetStatus
 import org.jaqpot.api.mapper.toDto
+import org.jaqpot.api.model.ModelDto
 import org.jaqpot.api.repository.DatasetRepository
 import org.jaqpot.api.service.model.dto.PredictionRequestDto
 import org.jaqpot.api.service.model.dto.PredictionResponseDto
@@ -20,7 +21,8 @@ private val logger = KotlinLogging.logger {}
 @Service
 class PredictionService(
     private val datasetRepository: DatasetRepository,
-    private val runtimeResolver: RuntimeResolver
+    private val runtimeResolver: RuntimeResolver,
+    private val qsarToolboxPredictionService: QSARToolboxPredictionService
 ) {
 
     @Async
@@ -71,6 +73,9 @@ class PredictionService(
         modelDto: PredictionModelDto,
         request: HttpEntity<PredictionRequestDto>,
     ): List<Any> {
+        if (modelDto.type == ModelDto.Type.QSAR_TOOLBOX) {
+            return qsarToolboxPredictionService.makePredictionRequest(modelDto, request)
+        }
 
         // uncomment to test request json
 //        val objectMapper = ObjectMapper()
